--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,4 +29,31 @@ body{
 .circle:after{
     top: auto;
     bottom: -5px;
+    animation: 0.5s bouncy linear infinite;
+}
+.circle:before{
+    animation: 0.5s negBouncy linear infinite;
+}
+
+@keyframes bouncy{
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(20px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+}
+@keyframes negBouncy{
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(-20px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
 }
