--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,7 @@ body{
     background: #fff;
     left: 45%;
     top: -5px;
+    animation: 2s rotate linear infinite;
 }
 .circle:after{
     top: auto;
@@ -41,6 +42,17 @@ body{
     }
     50%{
         transform: translateY(20px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+}
+@keyframes negBouncy{
+    0%{
+        transform: translateY(0px);
+    }
+    50%{
+        transform: translateY(-20px);
     }
     100%{
         transform: translateY(0px);
